# milkman-bot

./: Cargo.toml  Dockerfile  README.md  cow-order-execution-bot-deployment.yaml  infura-api-key-secret.yaml  integration-test.sh  milkman-bot-deployment.yaml  private-key-secret.yaml
.circleci/: config.yml
.github/workflows/: deploy.yaml  test.yaml
abis/: HashHelper.json  Milkman.json  MilkmanStateHelper.json  PriceChecker.json
src/: configuration.rs  constants.rs  cow_api_client.rs  encoder.rs  environment.rs  ethereum_client.rs  main.rs  old_ethereum_client.rs  old_main.rs  swap.rs  types.rs
src/abis/: CowAnywhere.json
