[package]
name = "milkman-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "milkman-bot"
path = "src/main.rs"

[profile.release]
opt-level = 0

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
hex = "0.4.3"
log = "0.4"
env_logger = "0.8.4"
anyhow = "1.0.61"
ethers = { version = "0.17.0", features = ["abigen", "rustls"] }
ethers-flashbots = "0.10.0"
url = { version = "2.2.2" }